--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="cred.blue"
-      content="Generate a Bluesky credibility score. Understand your Atproto data footprint. Vibe check strangers and new accounts."
-    />
+    <meta property="og:image" content="https://cred.blue/cred-blue-banner.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/credblue-logo-small.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>cred.blue</title>
     <link rel="stylesheet" href="https://use.typekit.net/yhs0sil.css">
   </head>
   <body>
