fix atproto spelling

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     
     <!-- Basic Meta Tags -->
-    <meta name="description" content="Generate a Bluesky credibility score. Understand your Atproto data footprint. Vibe check strangers and new accounts." />
+    <meta name="description" content="Generate a Bluesky credibility score. Understand your AT Proto data footprint. Vibe check strangers and new accounts." />
     <title>cred.blue</title>
 
     <!-- OpenGraph Meta Tags -->
     <meta property="og:title" content="cred.blue" />
-    <meta property="og:description" content="Generate a Bluesky credibility score. Understand your Atproto data footprint. Vibe check strangers and new accounts." />
+    <meta property="og:description" content="Generate a Bluesky credibility score. Understand your AT Proto data footprint. Vibe check strangers and new accounts." />
     <meta property="og:image" content="https://cred.blue/cred-blue-banner.jpg" />
     <meta property="og:url" content="https://cred.blue" />
     <meta property="og:type" content="website" />
@@ -20,7 +20,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="cred.blue" />
-    <meta name="twitter:description" content="Generate a Bluesky credibility score. Understand your Atproto data footprint. Vibe check strangers and new accounts." />
+    <meta name="twitter:description" content="Generate a Bluesky credibility score. Understand your AT Proto data footprint. Vibe check strangers and new accounts." />
     <meta name="twitter:image" content="https://cred.blue/cred-blue-banner.jpg" />
 
     <link rel="apple-touch-icon" href="https://cred.blue/credblue-logo-small.png" />
